==> PX4/PX4-Autopilot/platforms/nuttx/src/canbootloader/arch/nxp/s32k14x/drivers/can/driver.c <==
#include <nuttx/config.h>
#include "boot_config.h"
#include <stdint.h>
#include <stdlib.h>
#include <stdbool.h>
#include <string.h>
#include <errno.h>
#include <limits.h>
#include <hardware/s32k1xx_flexcan.h>
#include "nvic.h"
#include "board.h"
#include <systemlib/px4_macros.h>
#include "can.h"
#include "timer.h"
#include <arch/board/board.h>
#include "flexcan.h"
#include <lib/crc/crc.h>
#define CAN_TX_TIMEOUT_MS     (200 /(1000/(1000000/CONFIG_USEC_PER_TICK)))
#define MIN(X,Y) ((X) < (Y) ? (X) : (Y))
#define CLK_FREQ     80000000
#define CLOCKSEL     0
#define useFIFO      1
#define numberFIFOFilters  CAN_CTRL2_RFFN_16MB
#define FIFO_IFLAG1 (CAN_FIFO_NE | CAN_FIFO_WARN | CAN_FIFO_OV)

uint8_t can_tx(uint32_t message_id, size_t length, const uint8_t *message, uint8_t mailbox)
{
	timer_hrt_clear_wrap();
	uint32_t cnt = CAN_TX_TIMEOUT_MS;

	uint32_t mbi = NumMBinFiFoAndFilters + mailbox;
	uint32_t mb_bit = 1 << mbi;
	MessageBufferType *mb = &CAN0->MB[mbi].mb;

	/* Wait while all the MB are busy */

	while ((CAN0->ESR2 & (CAN_ESR2_IMB | CAN_ESR2_VPS)) == (CAN_ESR2_VPS)) {
		if (timer_hrt_wrap()) {
			timer_hrt_clear_wrap();

			if (--cnt == 0) {
				return CAN_ERROR;
			}
		}
	}

	/* Wait it the requested mailbox is busy */

	while ((CAN0->IFLAG1 & mb_bit) == 0) {

		/* Not indicated, but it may be:
		 * Inactive, aborted,
		 */

		if (mb->CS.code != TxMbDataOrRemote) {
			break;
		}

		if (timer_hrt_wrap()) {
			timer_hrt_clear_wrap();

			if (--cnt == 0) {
				return CAN_ERROR;
			}
		}
	}

	/* Reset the flag */

	CAN0->IFLAG1 = mb_bit;

	/* Construct the frame */

	MBcsType cs;
	cs.code = TxMbDataOrRemote;
	mb->CS.code = TxMbInactive;

	cs.ide = 1;
	mb->ID.ext = message_id;
	cs.rtr = 0;
	cs.dlc = length;
	mb->data.l = __builtin_bswap32(*(uint32_t *)&message[0]);
	mb->data.h = __builtin_bswap32(*(uint32_t *)&message[4]);
	mb->CS = cs; // Go.
	return CAN_OK;
}

uint8_t can_rx(uint32_t *message_id, size_t *length, uint8_t *message, uint8_t fifo)
{
	uint8_t rv = 0;

	uint32_t flags = CAN0->IFLAG1 & FIFO_IFLAG1;

	if ((flags & FIFO_IFLAG1)) {

		if (flags & CAN_FIFO_OV) {
			CAN0->IFLAG1 = CAN_FIFO_OV;
		}

		if (flags & CAN_FIFO_WARN) {
			CAN0->IFLAG1 = CAN_FIFO_WARN;
		}

		if (flags & CAN_FIFO_NE) {
			const RxFiFoType *rf = &CAN0->MB[FiFo].fifo;
			/*
			 * Read the frame contents
			 */
			*message_id = rf->ID.ext;
			*length     = rf->CS.dlc;
			*(uint32_t *)&message[0] = __builtin_bswap32(rf->data.l);
			*(uint32_t *)&message[4] = __builtin_bswap32(rf->data.h);
			(void)CAN0->TIMER;
			CAN0->IFLAG1 = CAN_FIFO_NE;
			rv = 1;
		}
	}

	return rv;
}

int can_init(can_speed_t speed, can_mode_t mode)
{

	/* Set the module disabled */

	if (!setEnable(false)) {
		return -ETIME;
	}

	/* Set the Clock */

	CAN0->CTRL1 |= CAN_CTRL1_CLKSRC;

	/* Set the module enabled */

	if (!setEnable(true)) {
		return -ETIME;
	}

	/*
	 * CAN timings for this bitrate
	 */
	Timings timings;
	const int timings_res = computeTimings(can_speed2freq(speed), &timings);

	if (timings_res < 0) {
		setEnable(false);
		return timings_res;
	}

	/*
	 * Hardware initialization from reset state
	 */

	int16_t rv = doReset(timings);

	if (rv != 0) {
		return -rv;
	}

	uint32_t ctl1 = 0;
	ctl1 |= CAN_CTRL1_PRESDIV(timings.prescaler - 1);
	ctl1 |= CAN_CTRL1_RJW(timings.rjw - 1);
	ctl1 |= CAN_CTRL1_PSEG1(timings.pseg1 - 1);
	ctl1 |= CAN_CTRL1_PSEG2(timings.pseg2 - 1);
	ctl1 |= ((mode == CAN_Mode_Silent) ? CAN_CTRL1_LOM : 0);
	ctl1 |= CAN_CTRL1_PROPSEG(timings.propseg - 1);
	CAN0->CTRL1 = ctl1;

	/*
	 * Default filter configuration
	 */
	volatile FilterType *filterBase = (FilterType *) &CAN0->MB[FirstFilter].mb;

	for (uint32_t i = 0; i < NumHWFilters; i++) {
		volatile FilterType *filter = &filterBase[i];
		filter->w = 0; // All bits do not care
	}

	CAN0->RXFGMASK = 0; // All bits do not care

	for (uint32_t mb = 0; mb < HWMaxMB; mb++) {
		CAN0->RXIMR[mb].w = 0; // All bits do not care
	}

	CAN0->IFLAG1 = FIFO_IFLAG1 | TXMBMask;
	CAN0->IMASK1 = FIFO_IFLAG1;

	setFreeze(false);
	return waitFreezeAckChange(false) ? 0 : -ETIME;
}

void can_cancel_on_error(uint8_t mailbox)
{
	/* Wait for completion the all 1's wat set in the tx code*/
	while (CAN_ESR1_TX == (CAN0->ESR1 & CAN_ESR1_TX));

	volatile uint32_t esr1 = CAN0->ESR1 & (CAN_ESR1_STFERR | CAN_ESR1_FRMERR |
					       CAN_ESR1_CRCERR | CAN_ESR1_ACKERR |
					       CAN_ESR1_BIT0ERR | CAN_ESR1_BIT1ERR | CAN_ESR1_TXWRN);

	/* Any errors */
	if (esr1) {

		uint32_t mbi = NumMBinFiFoAndFilters + mailbox;
		uint32_t mb_bit = 1 << mbi;
		MessageBufferType *mb = &CAN0->MB[mbi].mb;

		CAN0->ESR1 = esr1;
		CAN0->IFLAG1 = mb_bit;
		mb->CS.code = TxMbAbort;
	}

}
