==> PX4/PX4-Autopilot/platforms/nuttx/src/canbootloader/arch/stm/stm32f7/drivers/can/driver.c <==
#include <nuttx/config.h>
#include "boot_config.h"
#include <stdint.h>
#include <stdlib.h>
#include <string.h>
#include <errno.h>
#include <limits.h>
#include "chip.h"
#include <hardware/stm32_can.h>
#include "nvic.h"
#include "board.h"
#include <systemlib/px4_macros.h>
#include "can.h"
#include "timer.h"
#include <arch/board/board.h>
#include <lib/systemlib/crc.h>
#define INAK_TIMEOUT          65535
#define CAN_TX_TIMEOUT_MS     (200 /(1000/(1000000/CONFIG_USEC_PER_TICK)))
#define SJW_POS               24
#define BS1_POS               16
#define BS2_POS               20
#define CAN_TSR_RQCP_SHFTS    8
#define FILTER_ID             1
#define FILTER_MASK           2
# define QUANTA 16
# define BS1_VALUE 12
# define BS2_VALUE 1
# define QUANTA 9
# define BS1_VALUE 6
# define BS2_VALUE 0
# define QUANTA 14
# define BS1_VALUE 10
# define BS2_VALUE 1
# define QUANTA 14
# define BS1_VALUE 10
# define BS2_VALUE 1
#define CAN_1MBAUD_SJW 0
#define CAN_1MBAUD_BS1 BS1_VALUE
#define CAN_1MBAUD_BS2 BS2_VALUE
#define CAN_1MBAUD_PRESCALER (STM32_PCLK1_FREQUENCY/1000000/QUANTA)
#define CAN_500KBAUD_SJW 0
#define CAN_500KBAUD_BS1 BS1_VALUE
#define CAN_500KBAUD_BS2 BS2_VALUE
#define CAN_500KBAUD_PRESCALER (STM32_PCLK1_FREQUENCY/500000/QUANTA)
#define CAN_250KBAUD_SJW 0
#define CAN_250KBAUD_BS1 BS1_VALUE
#define CAN_250KBAUD_BS2 BS2_VALUE
#define CAN_250KBAUD_PRESCALER (STM32_PCLK1_FREQUENCY/250000/QUANTA)
#define CAN_125KBAUD_SJW 0
#define CAN_125KBAUD_BS1 BS1_VALUE

uint8_t can_tx(uint32_t message_id, size_t length, const uint8_t *message, uint8_t mailbox)
{
	uint32_t data[2];

	memcpy(data, message, sizeof(data));

	/*
	 * Just block while waiting for the mailbox.
	 */

	uint32_t mask = CAN_TSR_TME0 << mailbox;

	/* Reset the indication of timer expired */

	timer_hrt_clear_wrap();
	uint32_t cnt = CAN_TX_TIMEOUT_MS;

	while ((getreg32(STM32_CAN1_TSR) & mask) == 0) {
		if (timer_hrt_wrap()) {
			timer_hrt_clear_wrap();

			if (--cnt == 0) {
				return CAN_ERROR;
			}
		}
	}

	/*
	 * To allow detection of completion  - Set the LEC to
	 * 'No error' state off all 1s
	 */

	putreg32(CAN_ESR_LEC_MASK, STM32_CAN1_ESR);

	putreg32(length & CAN_TDTR_DLC_MASK, STM32_CAN1_TDTR(mailbox));
	putreg32(data[0], STM32_CAN1_TDLR(mailbox));
	putreg32(data[1], STM32_CAN1_TDHR(mailbox));
	putreg32((message_id << CAN_TIR_EXID_SHIFT) | CAN_TIR_IDE | CAN_TIR_TXRQ,
		 STM32_CAN1_TIR(mailbox));
	return CAN_OK;
}

uint8_t can_rx(uint32_t *message_id, size_t *length, uint8_t *message, uint8_t fifo)
{
	uint32_t data[2];
	uint8_t rv = 0;
	const uint32_t fifos[] = { STM32_CAN1_RF0R, STM32_CAN1_RF1R };

	if (getreg32(fifos[fifo & 1]) & CAN_RFR_FMP_MASK) {

		rv = 1;
		/* If so, process it */

		*message_id = (getreg32(STM32_CAN1_RIR(fifo)) & CAN_RIR_EXID_MASK) >>
			      CAN_RIR_EXID_SHIFT;
		*length = (getreg32(STM32_CAN1_RDTR(fifo)) & CAN_RDTR_DLC_MASK) >>
			  CAN_RDTR_DLC_SHIFT;
		data[0] = getreg32(STM32_CAN1_RDLR(fifo));
		data[1] = getreg32(STM32_CAN1_RDHR(fifo));

		putreg32(CAN_RFR_RFOM, fifos[fifo & 1]);

		memcpy(message, data, sizeof(data));
	}

	return rv;
}

int can_init(can_speed_t speed, can_mode_t mode)
{
	int speedndx = speed - 1;
	/*
	 * TODO: use full-word writes to reduce the number of loads/stores.
	 *
	 * Also consider filter use -- maybe set filters for all the message types we
	 * want. */
	const uint32_t bitrates[] = {
		(CAN_125KBAUD_SJW << SJW_POS) |
		(CAN_125KBAUD_BS1 << BS1_POS) |
		(CAN_125KBAUD_BS2 << BS2_POS) | (CAN_125KBAUD_PRESCALER - 1),

		(CAN_250KBAUD_SJW << SJW_POS) |
		(CAN_250KBAUD_BS1 << BS1_POS) |
		(CAN_250KBAUD_BS2 << BS2_POS) | (CAN_250KBAUD_PRESCALER - 1),

		(CAN_500KBAUD_SJW << SJW_POS) |
		(CAN_500KBAUD_BS1 << BS1_POS) |
		(CAN_500KBAUD_BS2 << BS2_POS) | (CAN_500KBAUD_PRESCALER - 1),

		(CAN_1MBAUD_SJW   << SJW_POS) |
		(CAN_1MBAUD_BS1   << BS1_POS) |
		(CAN_1MBAUD_BS2   << BS2_POS) | (CAN_1MBAUD_PRESCALER - 1)
	};

	/* Remove Unknow Offset */
	if (speedndx < 0 || speedndx > (int)arraySize(bitrates)) {
		return -EINVAL;
	}

	uint32_t timeout;
	/*
	 *  Reset state is 0x0001 0002 CAN_MCR_DBF|CAN_MCR_SLEEP
	 *  knock down Sleep and raise CAN_MCR_INRQ
	 */

	putreg32(CAN_MCR_DBF | CAN_MCR_INRQ, STM32_CAN1_MCR);

	/* Wait until initialization mode is acknowledged */

	for (timeout = INAK_TIMEOUT; timeout > 0; timeout--) {
		if ((getreg32(STM32_CAN1_MSR) & CAN_MSR_INAK) != 0) {
			/* We are in initialization mode */

			break;
		}
	}

	if (timeout < 1) {
		/*
		 * Initialization failed, not much we can do now other than try a normal
		 * startup. */
		return -ETIME;
	}


	putreg32(bitrates[speedndx] | mode << CAN_BTR_LBK_SHIFT, STM32_CAN1_BTR);
	putreg32(CAN_MCR_ABOM | CAN_MCR_AWUM | CAN_MCR_DBF | CAN_MCR_TXFP, STM32_CAN1_MCR);

	for (timeout = INAK_TIMEOUT; timeout > 0; timeout--) {
		if ((getreg32(STM32_CAN1_MSR) & CAN_MSR_INAK) == 0) {
			/* We are in initialization mode */

			break;
		}
	}

	if (timeout < 1) {
		return -ETIME;
	}

	/*
	 * CAN filter initialization -- accept everything on RX FIFO 0, and only
	 * GetNodeInfo requests on RX FIFO 1. */

	/* Set FINIT - Initialization mode for the filters- */
	putreg32(CAN_FMR_FINIT, STM32_CAN1_FMR);

	putreg32(0, STM32_CAN1_FA1R); /* Disable all filters */

	putreg32(3, STM32_CAN1_FS1R); /* Single 32-bit scale configuration for filters 0 and 1 */

	/* Filter 0 masks -- DTIDGetNodeInfo requests only */

	uavcan_protocol_t protocol;

	protocol.id.u32 = 0;
	protocol.ser.type_id = DTIDReqGetNodeInfo;
	protocol.ser.service_not_message = true;
	protocol.ser.request_not_response = true;

	/* Set the Filter ID */
	putreg32(protocol.id.u32 << CAN_RIR_EXID_SHIFT, STM32_CAN1_FIR(0, FILTER_ID));

	/* Set the Filter Mask */
	protocol.ser.type_id = BIT_MASK(LengthUavCanServiceTypeID);

	putreg32(protocol.id.u32 << CAN_RIR_EXID_SHIFT, STM32_CAN1_FIR(0, FILTER_MASK));

	/* Filter 1 masks -- everything is don't-care */
	putreg32(0, STM32_CAN1_FIR(1, FILTER_ID));
	putreg32(0, STM32_CAN1_FIR(1, FILTER_MASK));

	putreg32(0, STM32_CAN1_FM1R);   /* Mask mode for all filters */
	putreg32(1, STM32_CAN1_FFA1R);  /* FIFO 1 for filter 0, FIFO 0 for the
                                         * rest of filters */
	putreg32(3, STM32_CAN1_FA1R);   /* Enable filters 0 and 1 */

	/* Clear FINIT - Active mode for the filters- */

	putreg32(0, STM32_CAN1_FMR);

	return OK;
}

void can_cancel_on_error(uint8_t mailbox)
{
	uint32_t rvalue;

	/* Wait for completion the all 1's wat set in the tx code*/
	while (CAN_ESR_LEC_MASK == ((rvalue = (getreg32(STM32_CAN1_ESR) & CAN_ESR_LEC_MASK))));

	/* Any errors */
	if (rvalue) {

		putreg32(0, STM32_CAN1_ESR);

		/* Abort the the TX in case of collision wuth NART false  */

		putreg32(CAN_TSR_ABRQ0 << (mailbox * CAN_TSR_RQCP_SHFTS), STM32_CAN1_TSR);
	}
}
